--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -3,12 +3,15 @@ img {
 }
 
 .nav-brand {
-
-
     font-style: italic;
     font-family: "Xanh Mono", monospace;
+    width: 15%;
 }
 
+.navbar-toggler {
+
+    background-color: #AAAAAA !important;
+}
 
 .nav-brand a {
     text-decoration: none;
